--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,63 @@
-# Author: Aamnah
-# Link: https://aamnah.com
-# Version: 0.0.1
+#!/bin/bash
+
+#-----------------------------------------------------------------------
+#        Author: Aamnah
+#          Link: https://aamnah.com
+#       Version: 0.0.2
+#   Description: Flat Tmux Theme
+#        System: Armbian OS - Orange Pi Plus2 / Raspberry Pi 3
+# Compatibility: Debian, Ubuntu, Armbian, macOS
+#-----------------------------------------------------------------------
+
+# There are examples in `/usr/share/doc/tmux/examples/`
+
+# VARIABLES
+# COLORS: https://www.materialui.co/flatuicolors
+TURQUOISE='#1abc9c'
+PETERRIVER='#3498db'
+BLACK='black'
+DARKGRAY=''
+CLOUDS='#ecf0f1'
+SILVER='#bdc3c7'
+MIDNIGHTBLUE='#2c3e50'
+WETASPHALT='#34495e'
+CONCRETE='#95a5a6'
+ASBESTOS='#7f8c8d'
+ALIZARIN='#e74c3c'
+AMETHYST='#9b59b6'
+ORANGE='#f39c12'
+
+# CUSTOM STYLES
+# Set styles here, saves me scrolling down down down
+# FG first, BG second. Be consistent
+WINDOW_FG="${CONCRETE}"
+WINDOW_BG="${BLACK}"
+WINDOW_ACTIVE_FG="${CLOUDS}"
+WINDOW_ACTIVE_BG="${BLACK}"
+
+PANE_BORDER_FG="${WETASPHALT}"
+PANE_BORDER_BG="${BLACK}"
+PANE_ACTIVE_BORDER_FG="${TURQUOISE}"
+PANE_ACTIVE_BORDER_BG="${BLACK}"
+
+STATUS_FG="${CLOUDS}"
+STATUS_BG="${WETASPHALT}"
+STATUS_LEFT_FG="${CLOUDS}"
+STATUS_LEFT_BG="${ALIZARIN}"
+STATUS_RIGHT_FG="${CLOUDS}"
+STATUS_RIGHT_BG="${PETERRIVER}"
+
+WINDOW_STATUS_FG="${CLOUDS}"
+WINDOW_STATUS_BG="${MIDNIGHTBLUE}"
+WINDOW_STATUS_CURRENT_FG="${CLOUDS}"
+WINDOW_STATUS_CURRENT_BG="${TURQUOISE}"
+
+# CUSTOM FORMATS
+WINDOW_STATUS_SEPERATOR="  "
+WINDOW_STATUS_FORMAT=" #I. #W#F " 
+WINDOW_STATUS_CURRENT_FORMAT=" #I. #W#F "
+STATUS_RIGHT_FORMAT=" \"#H\" %h %e %l:%H %p "
+STATUS_LEFT_FORMAT=" #S "
 
 # Allow 256 Colors to be used in terminal 
 # (needed for many modern Vim colorschemes to work)
@@ -14,21 +71,31 @@ set -g default-terminal "tmux"
 # auto-reload .tmux.conf with `<prefix> r`
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 
-# Allow the mouse to resize panes etc.
+# Allow the mouse to resize panes, switch between panes and windows etc. 
+# Default is `off`
 set -g mouse on
 
 # Allow utf8 (special) characters
 # (This allows for time tp be displayed in status bar)
 setw -g utf8 on
 
-###################
-## THEME
-###################
 
-# Panes
-#-----------------------------------------------------------------------
-# set inactive/active window styles
-# style = comma-separated list of characteristics to be specified.
+########################################################################
+# FOMAT
+########################################################################
+#H	Hostname of local host
+#h	Hostname of local host (no domain name)
+#D	Unique pane ID
+#P	Index of pane
+#T	Title of pane
+#S	Name of session
+#F	Window flags
+#I	Index of window
+#W	Name of window
+
+########################################################################
+# THEME
+########################################################################
 
 # Possible color values:
 #		Hexadecimal ('#ffffff', all 6 digits, no #FFF shorthand, needs to be in commas) 
@@ -40,20 +107,11 @@ setw -g utf8 on
 # to disable the attribute, prefix with `no`. e.g. noreverse, noitalics etc.
 
 # These may be ‘bg=colour’ to set the background colour,
-# ‘fg=colour’ to set the foreground colour, and a list of
+# ‘fg=colour’ to set the foreground colour
 
 # Examples are:
 #	fg=yellow,bold,underscore,blink
 # bg=black,fg=default,noreverse
-
-set -g window-style 'fg=#C0C0C0, bg=#262626'
-set -g window-active-style 'fg=#eeeeee, bg=black'
-
-# set pane border colors
-set -g pane-border-style 'fg=#585858, bg=#262626'
-set -g pane-active-border-style 'fg=#1abc9c, bg=black'
-
-#message-style # status line message style
 
 # STYLES
 #pane-border-style
@@ -70,15 +128,84 @@ set -g pane-active-border-style 'fg=#1abc9c, bg=black'
 #message-style
 #mode-style
 
+# Panes
+#-----------------------------------------------------------------------
+# set inactive/active window styles
+# style = comma-separated list of characteristics to be specified.
+
+# Inactive Pane
+set -g window-style "fg=${WINDOW_FG}, bg=${WINDOW_BG}"
+
+# Active Pane
+set -g window-active-style "fg=${WINDOW_ACTIVE_FG}, bg=${WINDOW_ACTIVE_BG}"
+
+# set pane border colors
+set -g pane-border-style "fg=${PANE_BORDER_FG}, bg=${PANE_BORDER_BG}"
+
+# variabe subsitution does not work in this style of style declaration:
+set -g pane-active-border-style "fg=${PANE_ACTIVE_BORDER_FG}, bg=${PANE_ACTIVE_BORDER_BG}"
+# !important - need to use double quotes "" for variable substitution 
 
 # Status Bar
 #-----------------------------------------------------------------------
 # The status bar that shows at the bottom. 
 # You can style left/right separately
-set -g status-style 'fg=#ecf0f1, bg=#1abc9c'
-set -g status-left-style 'fg=#ecf0f1, bg=#3498db'
-set -g status-right-style 'fg=#ecf0f1, bg=#3498db'
+
+# Status Bar
+set -g status-style "fg=${STATUS_FG}, bg=${STATUS_BG}"
+
+# Status Bar (Left)
+set -g status-left-style "fg=${STATUS_LEFT_FG}, bg=${STATUS_LEFT_BG}"
+
+# Status Bar (Right)
+set -g status-right-style "fg=${STATUS_RIGHT_FG}, bg=${STATUS_RIGHT_BG}"
+
+# Center align the Window names
+# status-justify [left | centre | right]
+# Set the position of the window list component of the status line: left, centre or right justified.
+set -g status-justify centre
+
+# Window title in Status bar
+set -g window-status-style "fg=${WINDOW_STATUS_FG}, bg=${WINDOW_STATUS_BG}"
+
+## Current Window in Status Bar
+#-----------------------------------------------------------------------
+# Set status line style for the currently active window
+# Highlights the current window in the status bar
+
+set -g window-status-current-style "fg=${WINDOW_STATUS_CURRENT_FG},bold, bg=${WINDOW_STATUS_CURRENT_BG}"
+
+## Seperator between Window titles in Status Bar
+#-----------------------------------------------------------------------
+# window-status-separator string
+# Sets the separator drawn between windows in the status line. The default is a single space character.
+# NOTE: this seperator shows _after_ the window title. It'll still show even if there is only one window. e.g. `[0:bash]* ---` (where --- is the seperator)
+set -g window-status-separator ${WINDOW_STATUS_SEPERATOR}
+
+## Listing format for Window names in Status Bar
+#-----------------------------------------------------------------------
+# window-status-format string
+# Set the format in which the window is displayed in the status line window list. See the status-left option for details of special character sequences available. The default is ‘#I:#W#F’.
+
+# All windows
+set -g window-status-format ${WINDOW_STATUS_FORMAT}
+
+# Current window
+set -g window-status-current-format ${WINDOW_STATUS_CURRENT_FORMAT}
+
+## Status Bar (Right) Format
+#-----------------------------------------------------------------------
+# status-right string
+# Display string to the right of the status line. By default, the current pane title in double quotes, the date and the time are shown. As with status-left, string will be passed to strftime(3) and character pairs are replaced.
+# Default is `\"#H\" %R %d-%h-%y`
+set -g status-right ${STATUS_RIGHT_FORMAT}
+
+# Default is `#S` (name of current Sesion)
+set -g status-left ${STATUS_LEFT_FORMAT}
+
 
 
 # LINKS
-# http://man7.org/linux/man-pages/man1/tmux.1.html
+#-----------------------------------------------------------------------
+# Tmux Manual - http://man7.org/linux/man-pages/man1/tmux.1.html
+# Time Variables - https://man.openbsd.org/strftime.3
