--- a/.gitconfig
+++ b/.gitconfig
@@ -3,3 +3,6 @@
 [user]
   email = hello@aamnah.com
   name = Aamnah
+
+[alias]
+  lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --branches
