--- a/.gitconfig
+++ b/.gitconfig
@@ -6,3 +6,4 @@
 
 [alias]
   lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --branches
+   s = status
